# Hika

./: CMakeLists.txt  CMakeLists.txt.user.7f5fa35  CMakeLists.txt.user.e21505c  CMakeLists.txt.user.e2aefad  Inflectwindow.cpp  README.md  background.cpp  background.h  background.ui  hika.cpp  hika.h  hika.ui  ideas, improvements  inflectwindow.h  inflectwindow.ui  main.cpp  originwindow.cpp  originwindow.h  resources.qrc  sentencerwindow.cpp  sentencerwindow.h  sentencerwindow.ui  wbwindow.cpp  wbwindow.h  wbwindow.ui
backEnd/: HiKa.cpp
backEnd/alphabet/: AlpGame.cpp  AlpGame.h  Alphabet.cpp  Alphabet.h
backEnd/engrammar/: ENGrammar.cpp  ENGrammar.h  Exceptions.h
backEnd/grammar/: Exceptions.h  TransformMap.h
backEnd/grammar/engrammar/: ENGrammar.cpp  ENGrammar.h
backEnd/grammar/jpgrammar/: JPGrammar.cpp  JPGrammar.h
backEnd/inflectionmaster/: InflectionMaster.cpp  InflectionMaster.h
backEnd/jpgrammar/: JPGrammar.cpp  JPGrammar.h
backEnd/sentencer/: Sentencer.cpp  Sentencer.h
backEnd/template/: Origin.h  ScriptureOfWest.h
backEnd/wordbringer/: WordBringer.cpp  WordBringer.h
guide/: audio_checklist.txt  audio_checklist.txt.save  lesson_guide.txt  next  next_vocab.txt  next_vocab.txt.save  template.txt
sql/: vocabulary  vocabulary.db  vocabulary_pro.sqbpro
styles/: style.css
xml/alphabet/: en_alphabet.xml  hi_alphabet.xml  ka_alphabet.xml
xml/grammar/: ing.xml
xml/grammar/engrammar/: irregular_verbs.xml  ly.xml  s.xml
xml/grammar/jpgrammar/: adjective_exceptions.xml  te_verb_exceptions.xml
xml/vocabulary/: en_vocabulary.xml  en_vocabulary.xml.autosave  jp_vocabulary.xml  jpf_vocabulary.xml  ro_vocabulary.xml
